# robot_navigator

./: README.md
src/: .gitignore
src/maps/: cubes.pgm  cubes.yaml
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: gazebo_bridge.yaml  nav2_params_custom.yaml
src/my_robot_bringup/launch/: bringup_all.launch.py  components.launch.xml  my_robot_gazebo.launch.xml  navigation.launch.xml
src/my_robot_bringup/worlds/: cube_world.sdf
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/rviz/: urdf_config_lidar.rviz  urdf_cube.rviz
src/my_robot_description/urdf/: base_scan.xacro  base_scan_gazebo.xacro  camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/action/: TurtleController.action
src/my_robot_interfaces/msg/: SpeedAngle.msg
src/nav_bridge_py/: package.xml  setup.cfg  setup.py
src/nav_bridge_py/nav_bridge_py/: nav2_test.py
src/robot_controller_cpp/: CMakeLists.txt  package.xml
src/robot_controller_cpp/include/robot_controller_cpp/: lifecycle_node_manager.hpp  turtle_controller.hpp
src/robot_controller_cpp/src/: lifecycle_node_manager.cpp  turtle_controller.cpp
src/robot_controller_nav2/: CMakeLists.txt  package.xml
src/robot_controller_nav2/src/: teleop_keyboard.cpp
